--- a/output.css
+++ b/output.css
@@ -283,6 +283,20 @@
     }
   }
 }
+@layer base;
+@layer feComponentTransfer;
+#loginButton {
+  background-color: #007bff;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+}
+#loginButton:hover {
+  background-color: #0056b3;
+}
 @property --tw-border-style {
   syntax: "*";
   inherits: false;
